# investiGATOR

./: .commitlintrc.json  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  pyrightconfig.json
.amazonq/rules/: commit.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  commit-lint.yml  dependency-review.yml  docker.yml  release.yml  web-tests.yml
config/: logging.yaml
docs/: CIDR_ANALYZER.md  PROJECT_STRUCTURE.md  RELEASE_PROCESS.md  WEB_TESTING.md
examples/: cidr_analysis_example.py
scripts/: setup.sh
src/vpc_flow_investigator/: __init__.py  __main__.py  analyzers.py  aws_utils.py  cidr_analyzer.py  cidr_scanner.py  cli.py  config.py  logging_utils.py  parser.py  performance_utils.py  protocol_utils.py  template_data.py  time_utils.py  web.py  whois_utils.py
src/vpc_flow_investigator/cidrs/: geofeed.constant.com.json
src/vpc_flow_investigator/static/: .gitkeep  theme-switcher.js  themes.css
src/vpc_flow_investigator/static/js/: charts.js  config.js  forms.js  results.js  tables.js  utils.js
src/vpc_flow_investigator/templates/: index.html
tests/: README.md  __init__.py  conftest.py  test_basic_functionality.py  test_cli.py  test_web.py  test_web_coverage.py  test_web_e2e.py
